--- a/Seminar/document.tex
+++ b/Seminar/document.tex
@@ -254,19 +254,9 @@ Analogous to the detection of newsworthiness the credibility classifier was test
 \label{fig:boxCredibility}
 \end{figure}
 
-
-
-
-* Feature selection: evaluate 684 subsets, best results with 16 features
-
-* fraction of tweets having a positive/negative sentiment; 
-
-* fraction of tweets with URL, URL top 10.000 urls
-
-* tweets containing: question mark, exclamation mark, first- /second-person pronoun, emoticons
-
-
-
+The analysis of the feature selection showed that tweets with more URLs and in particular URLs which are included on the top-10.000 most visited domains belongs to credible topics. 
+Regarding polarity, non-credible tweets tend to concentrate more positive polarity scores, as opposite to credible tweets, which tend to express negative feelings.
+In contrast to credible topics, authors of tweets classified as non-credible concentrate question and exclamation marks, frequently use first and third-person pronouns and include much more emoticons.
 
 
 % =========================
