--- a/Seminar/bibliography.bib
+++ b/Seminar/bibliography.bib
@@ -1,59 +1,68 @@
-@ARTICLE{bowman:reasoning,
-	AUTHOR = "Mic Bowman and Saumya K. Debray and Larry L. Peterson",
-	TITLE = "Reasoning About Naming Systems",
-	JOURNAL = "ACM Trans. Program. Lang. Syst.",
-	VOLUME = {15},
-	NUMBER = {5},
-	PAGES = {795-825},
-	MONTH = "November",
-	YEAR = {1993}	}
+@inproceedings{P2,
+ author = {Duan, Yajuan and Jiang, Long and Qin, Tao and Zhou, Ming and Shum, Heung-Yeung},
+ title = {An Empirical Study on Learning to Rank of Tweets},
+ booktitle = {Proceedings of the 23rd International Conference on Computational Linguistics},
+ series = {COLING '10},
+ year = {2010},
+ location = {Beijing, China},
+ pages = {295--303},
+ numpages = {9},
+ url = {http://dl.acm.org/citation.cfm?id=1873781.1873815},
+ acmid = {1873815},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
 
-@ARTICLE{braams:babel,
-	AUTHOR = "Johannes Braams",
-	TITLE = "Babel, a Multilingual Style-Option System for Use with LaTeX's Standard Document Styles",
-	JOURNAL = {TUGboat},
-	VOLUME = {12},
-	NUMBER = {2},
-	PAGES = {291-301},
-	MONTH = "June",
-	YEAR = {1991}	}
+@article{P1,
+author = { Castillo Carlos  and  Mendoza Marcelo  and  Poblete Barbara },
+title = {Predicting information credibility in time-sensitive social media},
+journal = {Internet Research},
+volume = {23},
+number = {5},
+pages = {560-588},
+year = {2013},
+doi = {10.1108/IntR-05-2012-0095}
+}
 
-@INPROCEEDINGS{clark:pct,
-	AUTHOR = "Malcolm Clark",
-	TITLE = "Post Congress Tristesse",
-	BOOKTITLE = "TeX90 Conference Proceedings",
-	PAGES = "84-89",
-	ORGANIZATION = "TeX Users Group",
-	MONTH = "March", 
-	YEAR = {1991}	}
+@techreport{pagerank,
+          number = {1999-66},
+           month = {November},
+          author = {Lawrence Page and Sergey Brin and Rajeev Motwani and Terry Winograd},
+            note = {Previous number = SIDL-WP-1999-0120},
+           title = {The PageRank Citation Ranking: Bringing Order to the Web.},
+            type = {Technical Report},
+       publisher = {Stanford InfoLab},
+            year = {1999},
+     institution = {Stanford InfoLab},
+             url = {http://ilpubs.stanford.edu:8090/422/},
+}
 
-@ARTICLE{herlihy:methodology,
-	AUTHOR = "Maurice Herlihy",
-	TITLE = "A Methodology for Implementing Highly Concurrent
-	Data Objects",
-	JOURNAL = {ACM Trans. Program. Lang. Syst.},
-	VOLUME = {15},
-	NUMBER = {5},
-	PAGES = {745-770},
-	MONTH = "November",
-	YEAR = {1993}	}
+@incollection{ranksvm,
+ author = {Joachims, Thorsten},
+ chapter = {Making Large-scale Support Vector Machine Learning Practical},
+ title = {Advances in Kernel Methods},
+ editor = {Sch\"{o}lkopf, Bernhard and Burges, Christopher J. C. and Smola, Alexander J.},
+ year = {1999},
+ isbn = {0-262-19416-3},
+ pages = {169--184},
+ numpages = {16},
+ url = {http://dl.acm.org/citation.cfm?id=299094.299104},
+ acmid = {299104},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+} 
 
-@BOOK{Lamport:LaTeX,
-	AUTHOR = "Leslie Lamport",
-	TITLE = "LaTeX User's Guide and Document Reference Manual",
-	PUBLISHER = "Addison-Wesley Publishing Company",
-	ADDRESS = "Reading, Massachusetts",
-	YEAR = "1986"	}
+@MISC{okapi,
+    author = {S.E. Robertson and S. Walker and M. Beaulieu and Peter Willett},
+    title = {Okapi at TREC-7: Automatic ad hoc, filtering, VLC and interactive track},
+    year = {1998}
+}
 
-@BOOK{salas:calculus,
-	AUTHOR = "S.L. Salas and Einar Hille",
-	TITLE = "Calculus: One and Several Variable",
-	PUBLISHER = "John Wiley and Sons",
-	ADDRESS = "New York",
-	YEAR = "1978"	}
-
-
-
-
-
-
+@inproceedings{twittermonitor,
+  title={Twittermonitor: trend detection over the twitter stream},
+  author={Mathioudakis, Michael and Koudas, Nick},
+  booktitle={Proceedings of the 2010 ACM SIGMOD International Conference on Management of data},
+  pages={1155--1158},
+  year={2010},
+  organization={ACM}
+}
