--- a/Seminar/document.tex
+++ b/Seminar/document.tex
@@ -53,9 +53,9 @@ As a result of the big variety of content and different kinds of users it is ver
 \subsection*{Goals of the Papers}
 The primary element of this report are the two papers...
 
-In P2 they propose a method to rank tweets based on their content relevance to a given query. They use different set of features to find out weather a tweet is interesting for a user. Their \i{learning to rank} algorithm considers content relevance as well as account authority and twitter-specific features to rank tweets. In their evaluation they find out that especially if a URL is present in the tweet improves the relevance as well as that just the number of followers to an account doesn't directly correlates to bigger relevances of tweets from that author.
+In P2\cite{P2} they propose a method to rank tweets based on their content relevance to a given query. They use different set of features to find out weather a tweet is interesting for a user. Their \i{learning to rank} algorithm considers content relevance as well as account authority and twitter-specific features to rank tweets. In their evaluation they find out that especially if a URL is present in the tweet improves the relevance as well as that just the number of followers to an account doesn't directly correlates to bigger relevances of tweets from that author.
 
-In P1 the authors had a the main focus on the credibility of time-sensitive information, in particular on current news events. In a previous step they also try to automatically assess the newsworthiness of a discussion topic. This is to differenciate between the chatter and news related messages circulating on twitter in unsorted way. Both newsworthiness and credibility play an equally important role in this paper.
+In P1\cite{P1} the authors had a the main focus on the credibility of time-sensitive information, in particular on current news events. In a previous step they also try to automatically assess the newsworthiness of a discussion topic. This is to differenciate between the chatter and news related messages circulating on twitter in unsorted way. Both newsworthiness and credibility play an equally important role in this paper.
 
 % =========================
 % =========================
@@ -79,7 +79,7 @@ In P1 the authors had a the main focus on the credibility of time-sensitive info
 \section{Proposed Method: Ranking of \\Tweets}
 This section describes the method of ranking of tweets introduced in P2. 
 Their \textit{learning to Rank} method is a data-driven approach to assign a score to tweet. 
-For training the ranking model the RankSVM alogrith is used.
+For training the ranking model the RankSVM\cite{ranksvm} alogrithm is used.
 
 Figure \ref{fig:p2overview} shows the the paradigm of the method and the separation of the trainign and test corpus.
 
@@ -97,7 +97,7 @@ The content relevance features refer to those features which describe the conten
 P1 uses three different types of content relavance:
 
 \begin{itemize}
-\item \b{Okapi BM25} score measures the relavance between query and tweet. It considers the length of a tweet, the average length of tweets and the Inverse Document Frequency.
+\item \b{Okapi BM25}\cite{okapi} score measures the relavance between query and tweet. It considers the length of a tweet, the average length of tweets and the Inverse Document Frequency.
 \item \b{Similarity of contents} how many tweets of the query are similar in content with the current tweet. To accomplish that the cosine similarity between every pair of tweets is computed.
 \item \b{Length} is simply measured by the number of words that a tweet contains.
 \end{itemize}
@@ -126,10 +126,45 @@ To compute the authority of the user, P2 uses four different scores:
 \item \b{Follower score} number of followers a user has.
 \item \b{Mention score} number of times a user is referred to in tweets.
 \item \b{List score} number of lists a user appears in
-\item \b{Popularity score} computed by PageRank algorithm (Page et al., 1999) based on retweet relations.
+\item \b{Popularity score} computed by PageRank algorithm (Page et al., 1999)\cite{pagerank} based on retweet relations.
 \end{itemize}
 
+\subsection*{Evaluation}
+\subsubsection*{Dataset}
+To test the proposed method the authors of P2 analyzed hot searches on CrowsEye within a week and collected the messages of 20 of the most frequent searched query terms. The terms included 5 persons 5 persons, 5 locations, 5 products and 5 movie names. 
+In total there were 159,298 tweets captured in the time between Mach 25, 2010 and April 2, 2010.
 
+For the generation of a test dataset 500 tweets of each query was labeled by a human editor. The evaluators could apply four judgments grades on the tweets depending on their relevance to the search query. 
+The distribution of the grades were as follows: Excellent 20.9 \% ; Good 10.9\%; Fair 16.9\%; Bad 51.3\%.
+
+
+\subsubsection*{Results}
+For comparision the authors of P2 used the Normalized Discount Cumulative Gain (NDCG) metric, which is common to measure the quality of rankings.
+
+The ranking model, RankSVM, was tested on different types of feature subsets. The main types were 
+The main types of feature subsets proposed by the the authors are chronological order, account authority, and content relevance. Figure \ref{fig:ranking} shows the result of these rankings individually and also the combined or full set of features which is denoted as RankSVM\_Full.
+
+\begin{figure}[h]
+\centering
+\epsfig{file=img/p2_results.png, width=0.45\textwidth}
+\caption{Performance of Four Ranking Methods}
+\label{fig:ranking}
+\end{figure}
+
+It is clearly visible that content relevance is the worst type, which should not come as a surprise as it is essential a re-ranking of the results of the Twitter search. It is also shown that account authority is useful for ranking tweet relevance, as it outperforms ranking through chonological order and compete with the model trained with all the features.
+
+In the next part of the evaluation the authors of P2 tried to find out which feature as well as which combination of features showed the best results.
+To complete this evaluation a greedy feature selection method was used to find the best feature cojunction whichs outperforms RankSVM\_full. The best feature conjunction was found to be composed of the features URL, Sum\_mention, First\_List, Length, and Important\_follower and denoted as RankSVM\_Best. It outperforms RankSVM\_full by about 15,3 \% at NDCG@10.
+
+In the final evaluation it was tested which of the six features in particular had the most significant effect on RankSVM\_Best. Here the authors of P2 evaluate the importance of each feature by the decrement of performance when removing the feature measured from RankSVM\_Best. 
+Figure \ref{fig:p2_resultFeature} shows that only the feature URL has a significant effect.
+
+\begin{figure}[h]
+\centering
+\epsfig{file=img/p2_results_features.png, width=0.45\textwidth}
+\caption{Importance of Each Feature}
+\label{fig:p2_resultFeature}
+\end{figure}
 
 
 % =========================
@@ -145,7 +180,7 @@ The paper follows a supervised learning approach for the task of automatic class
 \subsection{Retrieving and Labeling of Data}
 It should be noted that the work of P1 is based on previous works and is an information cascade, which is composed of all of the messages which usually accompany newsworthy events. This means that only aggregated values of a topic are computed and compared, not on user or message level.
 
-For the collection of data on Twitter they used Twitter Monitor, which detects sharp increases (bursts) in the frequency of sets of keywords found in messages. It provides a keyword-based query to filter messages to generate a subset of messages who caused the event detector to trigger.
+For the collection of data on Twitter they used Twitter Monitor\cite{twittermonitor}, which detects sharp increases (bursts) in the frequency of sets of keywords found in messages. It provides a keyword-based query to filter messages to generate a subset of messages who caused the event detector to trigger.
 During their 2 month of monitoring twitter, they collected, after some rough filtering, more than 2.500 topics with ofter 1.873.000 messages in total.
 
 \subsubsection*{Newsworthiness}
@@ -271,62 +306,8 @@ In contrast to credible topics, authors of tweets classified as non-credible con
 % =========================
 % =========================
 
-\section{Evaluation}
-\subsection{Predicting information credibility in time-sensitive social media}
+\section{Comparision of the papers}
 
-\subsubsection*{Credibility}
-* predictability of the problem is very difficult, with very moderated k-statistic values
-
-* main conclusions are that misclassification of not-credible topics as credible is significant, but recall rates are quite acceptable.
-
-* features positive for credibility: more friends, more URLs + urls in popular 10.000, longer in general, negative sentiments
-
-* features negative for credibility: positive polarity, more question and exclamation marks, first and third-persion pronouns
-
-% =========================
-
-\subsection{An Empirical Study on Learning to Rank of Tweets}
-\subsubsection*{Dataset}
-To test the proposed method the authors of P2 analyzed hot searches on CrowsEye within a week and collected the messages of 20 of the most frequent searched query terms. The terms included 5 persons 5 persons, 5 locations, 5 products and 5 movie names. 
-In total there were 159,298 tweets captured in the time between Mach 25, 2010 and April 2, 2010.
-
-For the generation of a test dataset 500 tweets of each query was labeled by a human editor. The evaluators could apply four judgments grades on the tweets depending on their relevance to the search query. 
-The distribution of the grades were as follows: Excellent 20.9 \% ; Good 10.9\%; Fair 16.9\%; Bad 51.3\%.
-
-
-\subsubsection*{Results}
-For comparision the authors of P2 used the Normalized Discount Cumulative Gain (NDCG) metric, which is common to measure the quality of rankings.
-
-The ranking model, RankSVM, was tested on different types of feature subsets. The main types were 
-The main types of feature subsets proposed by the the authors are chronological order, account authority, and content relevance. Figure \ref{fig:ranking} shows the result of these rankings individually and also the combined or full set of features which is denoted as RankSVM\_Full.
-
-\begin{figure}[h]
-\centering
-\epsfig{file=img/p2_results.png, width=0.45\textwidth}
-\caption{Performance of Four Ranking Methods}
-\label{fig:ranking}
-\end{figure}
-
-It is clearly visible that content relevance is the worst type, which should not come as a surprise as it is essential a re-ranking of the results of the Twitter search. It is also shown that account authority is useful for ranking tweet relevance, as it outperforms ranking through chonological order and compete with the model trained with all the features.
-
-In the next part of the evaluation the authors of P2 tried to find out which feature as well as which combination of features showed the best results.
-To complete this evaluation a greedy feature selection method was used to find the best feature cojunction whichs outperforms RankSVM\_full. The best feature conjunction was found to be composed of the features URL, Sum\_mention, First\_List, Length, and Important\_follower and denoted as RankSVM\_Best. It outperforms RankSVM\_full by about 15,3 \% at NDCG@10.
-
-In the final evaluation it was tested which of the six features in particular had the most significant effect on RankSVM\_Best. Here the authors of P2 evaluate the importance of each feature by the decrement of performance when removing the feature measured from RankSVM\_Best. 
-Figure \ref{fig:p2_resultFeature} shows that only the feature URL has a significant effect.
-
-\begin{figure}[h]
-\centering
-\epsfig{file=img/p2_results_features.png, width=0.45\textwidth}
-\caption{Importance of Each Feature}
-\label{fig:p2_resultFeature}
-\end{figure}
-
-% =========================
-% =========================
-% =========================
-
-%\section{Related Work}
 
 % =========================
 % =========================
